fix: home page responsiveness & layout adjustment, navbar un-stuck

--- a/src/components/PageLayout/layout.scss
+++ b/src/components/PageLayout/layout.scss
@@ -117,11 +117,11 @@ img {
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
+  margin-bottom: 0;
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
 }
 svg:not(:root) {
   overflow: hidden;
