--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,32 +1,68 @@
 @use '../globals/colors' as colors;
 
 .hero-section {
-    width: 1100px;
-    margin: 100px auto 100px auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 0;
+    margin-left: calc((100% - 1250px)/2);
     display: flex;
-    align-items: space-between;
     flex-direction: row;
+}
+@media screen and (max-width: 1330px) {
+    .hero-section {
+        margin-left: 2.5%;
+    }
+}
+@media screen and (max-width: 1330px) {
+    .hero-section {
+        margin-left: 2.5%;
+    }
+}
+@media screen and (max-width: 690px) {
+    .hero-section {
+        margin-top: 70px;
+        margin-bottom: 70px;
+    }
 }
 
 .hero-section {
     .left {
         display: flex;
         flex-direction: column;
-        width: 550px;
+        width: 625px;
+        max-width: 95%;
+    }
+    .right {
+        width: 1000px;
     }
     h1 {
         color: colors.$color-white;
         font-weight: 700;
-        font-size: 3.5rem;
-        line-height: 1em;
+        font-size: 4rem;
+        line-height: 0.95em;
         margin-top: 0;
     }
-    h4 {
+    @media screen and (max-width: 690px) {
+        h1 {
+            font-size: 10.3vw;
+        }
+    }
+    h3 {
         color: colors.$color-white;
         font-weight: 300;
-        font-size: 1.15rem;
+        font-size: 1.3rem;
         margin-top: 15px;
         line-height: 1.5em;
+    }
+    @media screen and (max-width: 635px) {
+        h3 {
+            font-size: 3.7vw;
+        }
+    }
+    @media screen and (max-width: 488px) {
+        h3 {
+            font-size: 18px;
+        }
     }
     .btns {
         display: flex;
@@ -37,7 +73,7 @@
             div {
                 margin-top: 15px;
                 border-radius: 10px;
-                padding: 6px 26px 6px 26px; 
+                padding: 7px 26px 7px 26px; 
                 display: flex;
                 align-items: center;
                 font-size: 0.9rem; 
@@ -45,27 +81,13 @@
                 cursor: pointer; 
                 text-decoration: none; 
                 transition: all 0.2s ease-in-out;
-                &:first-of-type {
-                    margin-right: 15px;
-                    background: colors.$color-red; 
-                    color: colors.$color-white; 
-                    box-shadow: none;
-                    border: none; 
-                    &:hover{
-                        transition: all 0.2s ease-in-out; 
-                        box-shadow: 0px 4px 17px -1px colors.$color-red;
-                    }
-                }
-                &:last-of-type {
-                    background: transparent; 
-                    color: colors.$color-red; 
-                    box-shadow: none;
-                    border: 2px solid colors.$color-red;
-                    font-weight: 700;
-                    &:hover{
-                        transition: all 0.2s ease-in-out; 
-                        box-shadow: 0px 0px 18px -3px colors.$color-red inset;
-                    }
+                background: colors.$color-red; 
+                color: colors.$color-white; 
+                box-shadow: none;
+                border: none; 
+                &:hover{
+                    transition: all 0.2s ease-in-out; 
+                    box-shadow: 0px 4px 17px -2px colors.$color-red;
                 }
             }
         }
